--- a/css/_about.scss
+++ b/css/_about.scss
@@ -21,4 +21,25 @@
     }
   }
 
+  @media screen and (max-device-width: 768px) {
+    img {
+      width: 60%;
+    }
+
+    p {
+      margin-top: 40px;
+      font-size: 22px;
+      line-height: 35px;
+    }
+    .buttons-container {
+      button {
+        margin-top: 35px;
+        margin-bottom: 35px;
+      }
+      .ultimo {
+        margin-top: 0;
+      }
+    }
+  }
+
 }
