--- a/css/_quote.scss
+++ b/css/_quote.scss
@@ -23,6 +23,15 @@
     font-size: 16px;
     font-weight: 300;
   }
+
+  @media screen and (max-device-width: 768px) {
+    .row {
+      width: 85%;
+    }
+    p {
+      font-size: 20px;
+    }
+  }
 }
 
 
