--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,10 @@ header h1 span {
       font-size: 1.4em; } }
   @media screen and (max-width: 451px) {
     header h1 span {
-      font-size: 1em; } }
+      font-size: 1.2em;
+      border-top: 5px solid #77be32;
+      border-bottom: 5px solid #77be32;
+      padding-top: 5px; } }
 
 header h6 {
   text-transform: uppercase;
@@ -223,6 +226,18 @@ header i {
     display: inline-block;
     margin-right: 10px;
     margin-left: 10px; }
+@media screen and (max-device-width: 768px) {
+  #sobre img {
+    width: 60%; }
+  #sobre p {
+    margin-top: 40px;
+    font-size: 22px;
+    line-height: 35px; }
+  #sobre .buttons-container button {
+    margin-top: 35px;
+    margin-bottom: 35px; }
+  #sobre .buttons-container .ultimo {
+    margin-top: 0; } }
 
 #quote {
   margin: 0;
@@ -243,6 +258,11 @@ header i {
     margin-top: 40px;
     font-size: 16px;
     font-weight: 300; }
+  @media screen and (max-device-width: 768px) {
+    #quote .row {
+      width: 85%; }
+    #quote p {
+      font-size: 20px; } }
 
 #contato input, #contato textarea {
   background-color: transparent;
@@ -287,7 +307,23 @@ header i {
 
 #social {
   height: 200px;
-  background-color: #77be32; }
+  background-color: #77be32;
+  text-align: center; }
+  #social i {
+    font-size: 70px;
+    color: #f9f9f9;
+    line-height: 200px;
+    margin-right: 2%;
+    margin-left: 2%;
+    transition: color .2s ease-in-out; }
+    #social i:hover {
+      color: #2f2f2f; }
+  @media screen and (max-device-width: 768px) {
+    #social {
+      height: 150px; }
+      #social i {
+        font-size: 50px;
+        line-height: 150px; } }
 
 #copyright {
   height: 100px;
@@ -311,10 +347,11 @@ header i {
   padding-right: 0; }
 
 .thumb {
+  text-align: center;
   height: 250px;
   width: 100%;
   background-size: cover; }
-  .thumb:after {
+  .thumb::before {
     content: "";
     position: absolute;
     top: 0;
@@ -325,11 +362,26 @@ header i {
     -webkit-transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
     -moz-transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
     transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1); }
-  .thumb:hover:after, .thumb:active:after {
+  .thumb:hover::before, .thumb:active::before {
     background-color: rgba(119, 190, 50, 0.85);
     -webkit-transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
     -moz-transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1);
     transition: all 0.3s cubic-bezier(0.3, 0.1, 0.58, 1); }
+  .thumb:hover span {
+    opacity: 1;
+    line-height: 250px; }
+  .thumb span {
+    position: relative;
+    text-align: center;
+    line-height: 200px;
+    color: #f9f9f9;
+    opacity: 0;
+    font-family: Montserrat, Arial, sans-serif;
+    font-weight: 500;
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: all .3s ease-in-out; }
 
 html, body {
   padding: 0;
