--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,7 +1,14 @@
+.cont {
+  position: relative;
+  z-index: 1;
+}
 #social {
+  position:relative;
+  z-index: 1;
   height: 200px;
   background-color: $main-color;
   text-align: center;
+  margin-bottom: 100px;
 
   i {
     font-size: 70px;
@@ -26,7 +33,13 @@
 }
 
 #copyright {
+
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: -2;
   height: 100px;
+  width: 100%;
   background-color: $secondary-color;
   color: $bg-color;
   text-align: center;
