--- a/css/main.css
+++ b/css/main.css
@@ -305,10 +305,17 @@ header i {
 #contato .sucesso {
   color: #77be32; }
 
+.cont {
+  position: relative;
+  z-index: 1; }
+
 #social {
+  position: relative;
+  z-index: 1;
   height: 200px;
   background-color: #77be32;
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 100px; }
   #social i {
     font-size: 70px;
     color: #f9f9f9;
@@ -326,7 +333,12 @@ header i {
         line-height: 150px; } }
 
 #copyright {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: -2;
   height: 100px;
+  width: 100%;
   background-color: #2f2f2f;
   color: #f9f9f9;
   text-align: center;
@@ -389,6 +401,8 @@ html, body {
   height: 100%; }
 
 body {
+  position: relative;
+  z-index: 1;
   overflow-x: hidden;
   margin: 0;
   font-family: Montserrat, Arial, sans-serif;
@@ -396,6 +410,9 @@ body {
   font-size: 16px;
   background-color: #f9f9f9;
   color: #777777; }
+
+header, section {
+  background-color: inherit; }
 
 a:active,
 a:focus {
