--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,8 @@ html {
 
 body {
   @extend html;
+  position: relative;
+  z-index: 1;
   overflow-x: hidden;
   margin: 0;
   font-family: Montserrat, Arial, sans-serif;
@@ -24,6 +26,10 @@ body {
   font-size: 16px;
   background-color: $bg-color;
   color: $text-color;
+}
+
+header, section {
+  background-color: inherit;
 }
 
 a:active,
