--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -1,5 +1,21 @@
 #contato {
 
+  ::-webkit-input-placeholder {
+    color: $text-color;
+  }
+
+  :-moz-placeholder {
+    color: $text-color;
+  }
+
+  ::-moz-placeholder {
+    color: $text-color;
+  }
+
+  :-ms-input-placeholder {
+    color: $text-color;
+  }
+
   input, textarea {
     background-color: transparent;
     border: none;
