--- a/css/main.scss
+++ b/css/main.scss
@@ -4,11 +4,11 @@
 @import "fonts";
 @import "header";
 @import "about";
-@import "quote";
+// @import "quote";
+@import "social";
 @import "contact";
 @import "footer";
 @import "portfolio";
-
 html {
   padding: 0;
   margin: 0;
@@ -28,7 +28,8 @@ body {
   color: $text-color;
 }
 
-header, section {
+header,
+section {
   background-color: inherit;
 }
 
@@ -48,7 +49,6 @@ a:focus {
   height: 100%;
   margin: 0;
   padding: 0;
-
 }
 
 h2 {
@@ -77,14 +77,44 @@ button {
   text-transform: uppercase;
   font-weight: 600;
   color: $text-color;
-  @include transition(all 0.3s !important);
 
-  &:hover {
-    background-color: $main-color;
-    color: $bg-color;
-    border: 2px solid $main-color;
-    @include transition(all 0.3s !important);
+  /* efeito 3d */
+  vertical-align: middle;
+	position: relative;
+	z-index: 1;
+	-webkit-backface-visibility: hidden;
+	-moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+	-webkit-transition: border-color 0.3s, color 0.3s;
+	transition: border-color 0.3s, color 0.3s;
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 150%;
+    height: 100%;
+    background: $main-color;
+    z-index: -1;
+    -webkit-transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
+    transform: rotate3d(0, 0, 1, -45deg) translate3d(0, -3em, 0);
+    -webkit-transform-origin: 0% 100%;
+    transform-origin: 0% 100%;
+    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s, background-color 0.3s;
+    transition: transform 0.3s, opacity 0.3s, background-color 0.3s;
   }
-
+  &:hover {
+    color: $bg-color;
+	  border-color: $main-color;
+    &::before {
+      opacity: 1;
+      background-color: $main-color;
+      -webkit-transform: rotate3d(0, 0, 1, 0deg);
+      transform: rotate3d(0, 0, 1, 0deg);
+      -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+      transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+    }
+  }
 }
-
