--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@
 @import "contact";
 @import "footer";
 @import "portfolio";
+@import "hamburgers";
 html {
   padding: 0;
   margin: 0;
@@ -51,6 +52,23 @@ a:focus {
   padding: 0;
 }
 
+.hamburger {
+  z-index: 20;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+ 
+  &.is-active {
+    .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+      transition: all .5s;
+      background-color: $bg-color;
+    }
+  }
+  &:focus {
+    outline: none;
+  }
+}
+
 h2 {
   text-transform: uppercase;
   font-size: 36px;
@@ -68,7 +86,7 @@ h2 {
   margin-bottom: 80px;
 }
 
-button {
+button:not(.hamburger) {
   margin: 80px auto;
   padding: 20px 35px;
   background-color: $bg-color;
