--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -1,8 +1,10 @@
 @mixin vertical-align($position: relative) {
-  position: relative;
+  position: absolute;
   margin: 0 auto;
   top: 50%;
-  -webkit-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-  transform: translateY(-100%);
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
 }
