--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -15,11 +15,13 @@
   width: 100%;
   background-size: 150%;
   background-position: center;
-  transition: background-size 1s ease;
+  transform: translateZ(0);
+  transition: all .5s ease;
 
   &:hover {
     background-size: 120%;
     background-position: relative;
+    transform: translateZ(0);
   }
 
   &::before {
