--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,15 @@ nav {
   position: fixed;
   height: 100%;
   width: 100%;
-  background-color: rgba(119, 190, 50, 0.95); }
+  background-color: rgba(119, 190, 50, 0.95);
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(1.3);
+  transition: all .35s ease; }
+  #nav-full.is-shown {
+    transform: scale(1);
+    opacity: 1;
+    visibility: visible; }
   #nav-full img {
     position: fixed;
     top: 30px;
@@ -216,7 +224,8 @@ header i {
 #sobre img {
   position: relative;
   width: 300px;
-  animation: img-reveal .8s .5s backwards ease-out;
+  animation: img-reveal .8s .3s ease-out backwards;
+  animation-play-state: paused;
   transition: all .3s ease; }
   #sobre img:hover {
     filter: drop-shadow(0 16px 20px #a1a1a1);
@@ -249,19 +258,6 @@ header i {
   #sobre .ultimo {
     margin-top: 0 !important; } }
 
-@keyframes img-reveal {
-  0% {
-    opacity: 0;
-    transform: scale(0); }
-  30% {
-    opacity: .9;
-    transform: scale(1.1); }
-  60% {
-    transform: scale(0.95); }
-  100% {
-    transform: scale(1);
-    opacity: 1;
-    top: 0; } }
 .social {
   position: relative;
   z-index: 1;
@@ -377,10 +373,12 @@ header i {
   width: 100%;
   background-size: 150%;
   background-position: center;
-  transition: background-size 1s ease; }
+  transform: translateZ(0);
+  transition: all .5s ease; }
   .thumb:hover {
     background-size: 120%;
-    background-position: relative; }
+    background-position: relative;
+    transform: translateZ(0); }
   .thumb::before {
     content: "";
     position: absolute;
@@ -496,6 +494,21 @@ header i {
     transform: rotate(-90deg);
     transition: bottom 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1); }
 
+@keyframes img-reveal {
+  0% {
+    transform: translateY(0);
+    opacity: 0;
+    transform: scale(0); }
+  30% {
+    opacity: .9;
+    transform: scale(1.1); }
+  60% {
+    transform: scale(0.95); }
+  100% {
+    transform: translateY(0);
+    transform: scale(1);
+    opacity: 1;
+    top: 0; } }
 html, body {
   padding: 0;
   margin: 0;
@@ -534,10 +547,19 @@ a:focus {
   z-index: 20;
   position: fixed;
   top: 20px;
-  right: 20px; }
+  right: 20px;
+  opacity: 0;
+  transform: translateX(80px);
+  transition: all .3s ease; }
+  .hamburger.is-shown {
+    opacity: 1;
+    transform: translateX(0); }
+  .hamburger .hamburger-inner, .hamburger .hamburger-inner::before, .hamburger .hamburger-inner::after {
+    transition: all .3s !important; }
   .hamburger.is-active .hamburger-inner, .hamburger.is-active .hamburger-inner::before, .hamburger.is-active .hamburger-inner::after {
-    transition: all .5s;
     background-color: #f9f9f9; }
+  .hamburger:hover {
+    opacity: .6; }
   .hamburger:focus {
     outline: none; }
 
