--- a/css/_fonts.scss
+++ b/css/_fonts.scss
@@ -1,23 +1,4 @@
-@font-face {
-  font-family: Montserrat;
-  src: url(../fonts/Montserrat-SemiBold.otf);
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6, li {
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-}
-
-@font-face {
-  font-family: Montserrat;
-  src: url(../fonts/Montserrat-Regular.otf);
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: Montserrat;
-  src: url(../fonts/Montserrat-Light.otf);
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: Montserrat;
-  src: url(../fonts/Montserrat-Hairline.otf);
-  font-weight: 300;
 }
