--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -56,20 +56,22 @@
     text-align: center;
     color: $bg-color;
     opacity: 0;
-    font-family: Montserrat, Arial, sans-serif;
     font-weight: 500;
-    text-transform: uppercase;
     letter-spacing: 1px;
     transition: all 400ms ease;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, .2);
   }
 
   .titulo {
     line-height: 50px;
     font-size: 24px;
+    font-family: Montserrat, Arial, sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
   }
   .subtitulo {
     line-height: 500px;
-    font-size: 13px;
+    font-size: 19px;
   }
 }
 
