--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,7 @@ body {
   z-index: 1;
   overflow-x: hidden;
   margin: 0;
-  font-family: Montserrat, Arial, sans-serif;
+  font-family: Hind, Arial, sans-serif;
   font-weight: 400;
   font-size: 16px;
   background-color: $bg-color;
@@ -101,6 +101,7 @@ h2 {
 }
 
 button:not(.hamburger) {
+  font-family: 'Montserrat', sans-serif;
   margin: 80px auto;
   padding: 20px 35px;
   background-color: $bg-color;
