--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -3,10 +3,11 @@
 ============================*/
 $bg-color: #f9f9f9;
 $main-color: #77be32;
-$main-color-opacity: rgba(119, 190, 50, 0.9);
+$bg-color-opacity: rgba(249, 249, 249, 0.9);
 $main-color-nav-full: rgba(119, 190, 50, 0.95);
 $secondary-color: #2f2f2f;
 $text-color: #777777;
+$danger-color: #c0392b;
 
 /*============================
   SCREEN SIZES
