Inverte cores dos inputs

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -137,8 +137,7 @@ header h1 {
 }
 
 header h1 span {
-  padding-right: 10px;
-  padding-bottom: 9px;
+  padding: 10px;
   border-top: 10px solid $main-color;
   border-bottom: 10px solid $main-color;
   font-weight: 600;
