--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -27,7 +27,7 @@
     &:focus {
       color: $text-color;
       outline: none;
-      border-color: $secondary-color;
+      border-color: $main-color;
       @include transition(all, 0.3s !important);
     }
   }
@@ -35,7 +35,7 @@
   input {
     width: 100%;
     padding: 10px 10px 5px 10px;
-    border-bottom: 2px solid $main-color;
+    border-bottom: 2px solid $secondary-color;
     margin-bottom: 40px;
 
     &:invalid {
@@ -48,7 +48,7 @@
   textarea {
     width: 100%;
     padding: 20px;
-    border: 2px solid $main-color;
+    border: 2px solid $secondary-color;
     height: 360px;
     @media screen and (max-width: 451px) {
       height: 300px;
